[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/materials/fonts/terminal_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/audio/button_sound.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/scripts/interface/Terminal-Screen.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/interface/terminal_table_interface.png" type="Texture" id=4]

[node name="Terminal-Table-Screen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background2" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="interface" type="TextureRect" parent="."]
anchor_left = 0.078
anchor_top = 0.017
anchor_right = 0.922
anchor_bottom = 1.093
margin_left = 0.127998
margin_top = -0.200001
margin_right = -0.128052
margin_bottom = 0.199951
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="interface"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 85.856
margin_top = 34.088
margin_right = -91.688
margin_bottom = -85.7681
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label-header" type="Label" parent="interface"]
visible = false
anchor_left = 0.185
anchor_top = 0.23
anchor_right = 0.795
anchor_bottom = 0.23
margin_left = 1.065
margin_top = -3.0
margin_right = 2.95502
margin_bottom = 26.0
theme = ExtResource( 1 )
text = "---СТОЙЛ-ТЕК (ТМ)  ПЕРСОНАЛЬНЫЙ ТЕРМИНАЛ ---"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label-border" type="Label" parent="interface"]
visible = false
anchor_left = 0.181
anchor_top = 0.275
anchor_right = 0.799
anchor_bottom = 0.275
margin_left = 0.0690002
margin_top = -7.9805
margin_right = -8.04901
margin_bottom = 9.0195
theme = ExtResource( 1 )
text = "----------------------------------------------------------------------------"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_menu" type="Control" parent="interface"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label-text" type="Label" parent="interface/main_menu"]
visible = false
anchor_left = 0.236
anchor_top = 0.294
anchor_right = 0.8
anchor_bottom = 0.294
margin_left = -0.236008
margin_top = -0.399994
margin_right = -184.8
margin_bottom = 16.6
theme = ExtResource( 1 )
text = "Добро пожаловать, [введите_имя]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label-text2" type="Label" parent="interface/main_menu"]
visible = false
anchor_left = 0.185
anchor_top = 0.363
anchor_right = 0.8
anchor_bottom = 0.363
margin_left = 7.86545
margin_top = -8.54201
margin_right = -364.0
margin_bottom = 8.45799
theme = ExtResource( 1 )
text = "Сообщения:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="interface/main_menu"]
visible = false
anchor_left = 0.21
anchor_top = 0.39
anchor_right = 0.78
anchor_bottom = 0.39
margin_left = 0.289993
margin_top = -1.52588e-05
margin_right = 0.219971
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Control" parent="interface"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="interface/message"]
visible = false
anchor_left = 0.182
anchor_top = 0.285
anchor_right = 0.783
anchor_bottom = 0.285
margin_left = 0.317993
margin_top = -0.292526
margin_right = -0.03302
margin_bottom = 24.7075
theme = ExtResource( 1 )
text = "               [Назад]"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message-header" type="Label" parent="interface/message"]
visible = false
anchor_left = 0.209
anchor_top = 0.342
anchor_right = 0.8
anchor_bottom = 0.342
margin_left = 0.0410004
margin_top = -0.200012
margin_right = -1.79999
margin_bottom = 16.8
theme = ExtResource( 1 )
text = "Заголовок сообщения"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textLabel" type="RichTextLabel" parent="interface/message"]
visible = false
anchor_left = 0.194
anchor_top = 0.388
anchor_right = 0.79
anchor_bottom = 0.388
margin_left = 0.306
margin_top = 0.199997
margin_right = -0.290039
margin_bottom = 208.2
theme = ExtResource( 1 )

[node name="scroll" type="ScrollContainer" parent="interface/message"]
anchor_left = 0.188
anchor_top = 0.408
anchor_right = 0.783
anchor_bottom = 0.72
margin_left = -0.188004
margin_top = 0.199982
margin_right = -0.03302
margin_bottom = -3.05176e-05
rect_min_size = Vector2( 447, 187 )
theme = ExtResource( 1 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textLabel" type="Label" parent="interface/message/scroll"]
visible = false
margin_right = 514.235
margin_bottom = 201.352
rect_min_size = Vector2( 447, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
autowrap = true

[node name="audi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="pressed" from="interface/message/back" to="." method="_on_back_pressed"]
